@@ -84,8 +84,9 @@ From Rob Boehne
     - Fixed bug where changing TEXTFILESUFFIX would cause Substfile() to rebuild. (Github Issue #3540)
     - Script/Main.py now uses importlib instead of imp module.
     - Drop some Python 2-isms.
-    - Pass on VSCMD_DEBUG and VSCMD_SKIP_SENDTELEMETRY to msvc tool setup
-      if set in environment.
+    - MSVC updates: pass on VSCMD_DEBUG and VSCMD_SKIP_SENDTELEMETRY to msvc
+      tool setup if set in environment. Add powershell to default env
+      (used to call telemetry script).
 
 
 RELEASE 3.1.2 - Mon, 17 Dec 2019 02:06:27 +0000
